package com.amazon.ata.oop.metrics.reporting;

public final class MetricsReporterImpl implements MetricsReporter {

    @Override
    public void accept(Metrics metrics) {
        // add your code here as part of Task 1
        // Think about what you would store when you get
        // some information
    }

    @Override
    public void generateReport() {
        // add your code here are part of Task 1
        // Think about where all the data you have gathered
        // and generate your data to print out.
    }
}
